# FirewallManager

./: Cargo.toml  README.md  com.github.rodrigofilipefaria.FirewallManager.json  com.github.rodrigofilipefaria.FirewallManager.json~  meson.build
data/: com.github.rodrigofilipefaria.FirewallManager.desktop.in  com.github.rodrigofilipefaria.FirewallManager.gschema.xml  com.github.rodrigofilipefaria.FirewallManager.metainfo.xml.in  com.github.rodrigofilipefaria.FirewallManager.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: application.rs  config.rs  firewall_dbus_api.rs  firewall_manager.gresource.xml  main.rs  meson.build  window.rs  window.ui
src/backend/: client.rs  mod.rs  proxies.rs  services.rs  zones.rs
src/ui/: dashboard.rs  mod.rs  services.rs  utils.rs  window.rs  window.ui  zones.rs
