[package]
name = "firewall_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
zbus = { version = "=5.14.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
